2013-06-08: v0.1: Added Dutch translation
                  Added Swedish translation

2013-06-09: v0.1: Added British English translation
                  Added Norwegian translation
                  Enabled translation of .desktop file